# ai-issue-agent

./: .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  SECURITY.md  index.md
docs/admin-guide/: deployment.md  monitoring.md  overview.md  performance.md  security.md
docs/developer-guide/: api-reference.md  architecture.md  contributing.md  core-components.md  setup.md  testing.md
docs/reference/: changelog.md
docs/user-guide/: configuration.md  getting-started.md  installation.md  troubleshooting.md  usage.md
src/ai_issue_agent/: __init__.py  __main__.py  _version.py
src/ai_issue_agent/adapters/: __init__.py
src/ai_issue_agent/adapters/chat/: __init__.py  slack.py
src/ai_issue_agent/adapters/llm/: __init__.py  anthropic.py
src/ai_issue_agent/adapters/vcs/: __init__.py  github.py
src/ai_issue_agent/config/: __init__.py  loader.py  schema.py
src/ai_issue_agent/core/: __init__.py  agent.py  code_analyzer.py  issue_matcher.py  message_handler.py  traceback_parser.py
src/ai_issue_agent/interfaces/: __init__.py  chat.py  llm.py  vcs.py
src/ai_issue_agent/models/: __init__.py  analysis.py  issue.py  message.py  traceback.py
src/ai_issue_agent/utils/: __init__.py  async_helpers.py  health.py  logging.py  metrics.py  safe_subprocess.py  security.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/fixtures/issues/: sample_issues.json
tests/fixtures/security/: malicious_inputs.txt  secrets.txt
tests/fixtures/tracebacks/: in_code_block.txt  multiline_msg.txt  nested.txt  simple.txt  syntax_error.txt  truncated.txt  with_secrets.txt
tests/integration/: __init__.py
tests/unit/: __init__.py  test_agent.py  test_analysis.py  test_anthropic_adapter.py  test_async_helpers.py  test_code_analyzer.py  test_config.py  test_github_adapter.py  test_health.py  test_interfaces.py  test_issue.py  test_issue_matcher.py  test_logging.py  test_message.py  test_message_handler.py  test_metrics.py  test_safe_subprocess.py  test_security.py  test_slack_adapter.py  test_traceback.py  test_traceback_parser.py
